--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,54 +1,62 @@
+        /* FONTS */
+
 @font-face {
     font-family: 'Capture_it';
-    src: url('fonts/Capture_it.ttf') format('truetype');
+    src: url('../../public/fonts/Capture_it.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'abster-webfont';
-    src : url('fonts/abster-webfont.ttf') format('truetype');
+    src: url('../../public/fonts/abster-webfont.ttf') format('truetype');
 }
 
 @font-face {
     font-family: 'Potra';
-    src : url('fonts/Potra.ttf') format('truetype');
+    src: url('../../public/fonts/Potra.ttf') format('truetype');
 }
+
+        /* HEADER */
 
 .container-fluid {
-    width: 100%;
+    max-width: 100vw;
     padding-right: 0px;
     padding-left: 0px;
-    margin-right: auto;
-    margin-left: auto;
+    margin-right: 0px;
+    margin-left: 0px;
 }
 
-#logoTitle_and_navbar { background-color: darkred; }
+#logoTitle_and_navbar { 
+max-width: 100%;
+    background-color: darkred; }
 
 #logo_and_title { 
-    max-height: 300px;
+    width: 100%;
+    max-height: 40vh;
 }
 
 #title { 
-   /* background-color: pink; */
+   display: block;
+    max-height: 30vh;
     font-family: 'Potra', 'abster-webfont', 'Capture_it', "Arial Black", sans-serif;
-    font-size: 90px;
+    font-size: 5.5em;
     font-style: italic;
     text-decoration: underline;
-    max-height: 300px;
     letter-spacing: .3rem;
     color: black;
     font-weight: bolder;
-    line-height: 150px;
 }
 
 #logo {
-   /* background-color: green; */
     margin-top: 25px;
     line-height: 250px;
     font-weight: bolder;
     vertical-align: middle;
 }
 
+        /* NAV */
+
 #navbar { 
+    width: 100%;
     line-height: 30px;
     font-family: 'abster-webfont', sans-serif;
     font-weight: bolder;
@@ -56,7 +64,7 @@
 }
 
 #playButton {
-	border: 0;
+    border: 0;
     line-height: 30px;
     padding: 5px 20px;
     font-size: 1rem;
@@ -79,6 +87,65 @@
 #playButton:hover { background-color: rgba(255, 0, 0, 1); }
 
 #playButton:active { 
-	box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
+    box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
                 inset 2px 2px 3px rgba(0, 0, 0, .6); 
+}
+
+        /* MAIN CONTENT */
+
+#rulesTitle { text-decoration: underline; }
+
+blockquote { color : purple; }
+
+        /* FOOTER */
+
+footer {
+    width: 100vw;
+}
+
+#footer {
+	max-height: 144px;
+	background-color: black;
+	line-height: 48px;
+	color: white;
+	position: absolute;
+	bottom: 0;
+}
+
+#siteTitle { 
+	font-family: 'abster-webfont', 'Capture_it', "Arial Black", sans-serif;
+	letter-spacing: .1rem;
+}
+
+#copyright {
+	border-right: 3px solid white;
+	border-left: 3px solid white;
+	margin-top: 24px;
+	margin-bottom: 24px;
+	font-weight: bold;
+}
+
+#footer a {
+	color: white;
+}
+
+#footer a:hover {
+	color: red;
+	text-shadow: white 1px 0 5px;
+	font-weight: bold;
+}
+
+        /* ERROR VIEW */
+
+#title_404 {
+    margin-top: 40vh;
+    margin-left: 45vw;
+}
+
+#text_404 {
+    margin-left: 35vw;
+}
+
+#title_404, #text_404 {
+    text-decoration: underline;
 }
